fix css class name confusion

--- a/src/opp.html
+++ b/src/opp.html
@@ -95,11 +95,11 @@
             <span class="searchTitle">Rechercher : </span>
             <button id="clearSearchBt" class="toolbarBt"><span class="tooltip">Supprimer les filtres</span></button>
             <div id='filters'>
-              <div id='freetextFilter' class="filter">
+              <div id='freetextFilter' class="searchFilter">
                 <div class='label'>Mots clés :</div>
                 <input type="text" id="query" class='textFilter'></input>
               </div>
-              <div id='providerFilter' class='filter'>
+              <div id='providerFilter' class='searchFilter'>
                 <div class='label'>Itinéraire : </div>
                 <select id='PROVIDER' class='dropDownFilter'>
                   <option value=""></option>
