add timeline preview

--- a/src/opp.html
+++ b/src/opp.html
@@ -85,6 +85,8 @@
 
         <div id="photo2" class='photo'></div>
 
+        <div id="timeline"></div>
+
       </div>
 
       <div id="sidePanel">
@@ -131,6 +133,7 @@
         <button id="toggleSpotViewBt" class="toolbarBt viewMode"><img src="icons/toolbar/spot.svg" onload="SVGInject(this)"/><span class="tooltip">Comparer avec une loupe</span></button>
         <!--button id="shareBt" class="toolbarBt"><img src="icons/toolbar/share.svg" onload="SVGInject(this)"/><span class="tooltip">Générer un lien partageable</span></button-->
         <button id="toggleSearchBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/search.svg" onload="SVGInject(this, {makeIdsUnique:false})"/><span class="tooltip">Rechercher des points de vue</span></button>
+        <button id="toggleTimelineBt" class="toolbarBt viewMode"><img src="icons/toolbar/timeline.svg" onload="SVGInject(this)"/><span class="tooltip">Afficher la ligne de temps</span></button>
         <button id="aboutBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/about.svg" onload="SVGInject(this)"/><span class="tooltip"><div>A propos</div></span></button>
       </div>
 
