--- a/src/opp.html
+++ b/src/opp.html
@@ -51,40 +51,43 @@
 
       <div id="split1" class="vsplitter"></div>
 
-      <div id="photos">
+      <div id="photosWrapper">
+        <div id="photos">
 
-        <div id='widgets1' class='widgets topLeft'>
-          <div>
-            <select id='dropDownDate1' class='dropDownDate'></select><div id='sketchButton1' class='sketchButton uiIcon'></div>
+          <div id='widgets1' class='widgets topLeft'>
+            <div>
+              <select id='dropDownDate1' class='dropDownDate'></select><div id='sketchButton1' class='sketchButton uiIcon'></div>
+            </div>
+            <div id='chkBkgPhoto1' class='chkBkgPhoto'>
+              <input type="checkbox"></input>
+              <label>Arr. plan photo</label>
+            </div>
+            <div id='photoNav1' class='photoNav'>
+              <div id='photoPrev1' class='photoNavBt'>&#8249;</div>
+              <div id='photoNext1' class='photoNavBt'>&#8250;</div>
+            </div>
           </div>
-          <div id='chkBkgPhoto1' class='chkBkgPhoto'>
-            <input type="checkbox"></input>
-            <label>Arr. plan photo</label>
+
+          <div id='widgets2' class='widgets'>
+            <div>
+              <select id='dropDownDate2' class='dropDownDate'></select><div id='sketchButton2' class='sketchButton uiIcon'></div>
+            </div>
+            <div id='chkBkgPhoto2' class='chkBkgPhoto'>
+              <input type="checkbox"></input>
+              <label>Arr. plan photo</label>
+            </div>
+            <div id='photoNav2' class='photoNav'>
+              <div id='photoPrev2' class='photoNavBt'>&#8249;</div>
+              <div id='photoNext2' class='photoNavBt'>&#8250;</div>
+            </div>
           </div>
-          <div id='photoNav1' class='photoNav'>
-            <div id='photoPrev1' class='photoNavBt'>&#8249;</div>
-            <div id='photoNext1' class='photoNavBt'>&#8250;</div>
-          </div>
+
+          <div id="photo1" class='photo'></div>
+
+          <div id="photo2" class='photo'></div>
+
         </div>
-
-        <div id='widgets2' class='widgets'>
-          <div>
-            <select id='dropDownDate2' class='dropDownDate'></select><div id='sketchButton2' class='sketchButton uiIcon'></div>
-          </div>
-          <div id='chkBkgPhoto2' class='chkBkgPhoto'>
-            <input type="checkbox"></input>
-            <label>Arr. plan photo</label>
-          </div>
-          <div id='photoNav2' class='photoNav'>
-            <div id='photoPrev2' class='photoNavBt'>&#8249;</div>
-            <div id='photoNext2' class='photoNavBt'>&#8250;</div>
-          </div>
-        </div>
-
-        <div id="photo1" class='photo'></div>
-
-        <div id="photo2" class='photo'></div>
-
+        
         <div id="timeline"></div>
 
       </div>
