timeline and toolbar css improvement

--- a/src/opp.html
+++ b/src/opp.html
@@ -87,8 +87,12 @@
           <div id="photo2" class='photo'></div>
 
         </div>
-        
-        <div id="timeline"></div>
+
+        <div id="timeline">
+          <div id=thumbPrev class='thumbNavBt'>&#8249;</div>
+          <div id=thumbNext class='thumbNavBt'>&#8250;</div>
+          <div id="thumbs"></div>
+        </div>
 
       </div>
 
