fix panel button css

--- a/src/opp.html
+++ b/src/opp.html
@@ -103,7 +103,7 @@
           <div id="searchPanelFlexContainer">
             <div id="seachHeader">
               <span class="searchTitle">Rechercher : </span>
-              <button id="clearSearchBt" class="toolbarBt"><span class="tooltip">Supprimer les filtres</span></button>
+              <button id="clearSearchBt" class="panelBt"><span class="tooltip">Supprimer les filtres</span></button>
               <div id='filters'>
                 <div id='freetextFilter' class="searchFilter">
                   <div class='label'>Mots clés :</div>
