fix timeline active class unwanted toggle

--- a/src/opp.html
+++ b/src/opp.html
@@ -139,7 +139,7 @@
         <button id="toggleSbsViewBt" class="toolbarBt viewMode"><img src="icons/toolbar/sbs.svg" onload="SVGInject(this)"/><span class="tooltip">Comparer avec un séparateur glissant</span></button>
         <button id="toggleSpotViewBt" class="toolbarBt viewMode"><img src="icons/toolbar/spot.svg" onload="SVGInject(this)"/><span class="tooltip">Comparer avec une loupe</span></button>
         <button id="toggleSearchBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/search.svg" onload="SVGInject(this, {makeIdsUnique:false})"/><span class="tooltip">Rechercher des points de vue</span></button>
-        <button id="toggleTimelineBt" class="toolbarBt viewMode"><img src="icons/toolbar/timeline.svg" onload="SVGInject(this)"/><span class="tooltip">Afficher la ligne de temps</span></button>
+        <button id="toggleTimelineBt" class="toolbarBt"><img src="icons/toolbar/timeline.svg" onload="SVGInject(this)"/><span class="tooltip">Afficher la ligne de temps</span></button>
         <button id="shareBt" class="toolbarBt"><img src="icons/toolbar/share.svg" onload="SVGInject(this)"/><span class="tooltip">Générer un lien partageable</span><div class='sharePanel'>Lien permanent vers la vue actuelle :<div id='urlTxt'></div></div></button>
         <button id="aboutBt" class="toolbarBt panelSwitch"><img src="icons/toolbar/about.svg" onload="SVGInject(this)"/><span class="tooltip"><div>A propos</div></span></button>
       </div>
