add sketch tooltip

--- a/src/opp.html
+++ b/src/opp.html
@@ -56,7 +56,7 @@
 
           <div id='widgets1' class='widgets topLeft'>
             <div>
-              <select id='dropDownDate1' class='dropDownDate'></select><div id='sketchButton1' class='sketchButton uiIcon'></div>
+              <select id='dropDownDate1' class='dropDownDate'></select><div id='sketchButton1' title='Afficher le croquis' class='sketchButton uiIcon'></div>
             </div>
             <div id='chkBkgPhoto1' class='chkBkgPhoto'>
               <input type="checkbox"></input>
@@ -70,7 +70,7 @@
 
           <div id='widgets2' class='widgets'>
             <div>
-              <select id='dropDownDate2' class='dropDownDate'></select><div id='sketchButton2' class='sketchButton uiIcon'></div>
+              <select id='dropDownDate2' class='dropDownDate'></select><div id='sketchButton2' title='Afficher le croquis' class='sketchButton uiIcon'></div>
             </div>
             <div id='chkBkgPhoto2' class='chkBkgPhoto'>
               <input type="checkbox"></input>
