adjust baseurl on static page

--- a/src/opp.html
+++ b/src/opp.html
@@ -31,7 +31,7 @@
     <script src="lib/svg-inject.min.js"></script>
 
     <script src="js/L.VoppTilesLayer.js?102"></script>
-    <script src="opp.js?102"></script>
+    <script id="oppjs" src="opp.js?102"></script>
     <link rel="stylesheet" href="opp.css?102" />
 
   </head>
