css matrix align test

--- a/src/opp.html
+++ b/src/opp.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.6.1/fuse.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.3.0/math.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.6.0/leaflet.css" />
@@ -66,6 +67,7 @@
               <div id='photoPrev1' class='photoNavBt'>&#8249;</div>
               <div id='photoNext1' class='photoNavBt'>&#8250;</div>
             </div>
+            <div id='chkAlign1' class='chkAlign'><input type="checkbox"><label>Aligner</label></input></div>
           </div>
 
           <div id='widgets2' class='widgets'>
@@ -80,6 +82,7 @@
               <div id='photoPrev2' class='photoNavBt'>&#8249;</div>
               <div id='photoNext2' class='photoNavBt'>&#8250;</div>
             </div>
+            <div id='chkAlign2' class='chkAlign'><input type="checkbox"><label>Aligner</label></input></div>
           </div>
 
           <div id="photo1" class='photo'></div>
