--- a/src/opp.html
+++ b/src/opp.html
@@ -30,9 +30,8 @@
     <link rel="stylesheet" href="lib/leaflet.magnifyingglass.css" />
     <script src="lib/svg-inject.min.js"></script>
 
-    <script src="js/L.VoppTilesLayer.js?102"></script>
-    <script id="oppjs" src="opp.js?102"></script>
-    <link rel="stylesheet" href="opp.css?102" />
+    <script type="module" id="oppjs" src="opp.js?114"></script>
+    <link rel="stylesheet" href="opp.css?114" />
 
   </head>
 
